--- a/WebApp/Views/Chat/Index.cshtml
+++ b/WebApp/Views/Chat/Index.cshtml
@@ -66,7 +66,7 @@
                 $.ajax({
                     type: "POST",
                     contentType: "application/json; charset=utf-8",
-                    data: '{"message":"' + message + '","friend":"'+friend+'","sender":"'+user+'"}',
+                    data: '{"message":"' + message + '","sentTo":"'+friend+'","sender":"'+user+'"}',
                     url: "@Url.Action("sendmsg")",
                     dataType: "json",
                     success: function (response) {
